infrastructure/gitops-ocp/gitops-namespace-access-platform/platform/namespaces/staging/dbank-app-04/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dbank-app-04-staging
  labels:
    app.kubernetes.io/name: dbank-app-04
    app.kubernetes.io/managed-by: argocd
    platform.company.io/managed-by: platform-team
    platform.company.io/application: dbank-app-04
    platform.company.io/environment: staging
    platform.company.io/domain: risk-management
